syntax = "proto3";

package events;
option go_package = "pkg/events";

import "google/protobuf/timestamp.proto";

message AppInstallEvent {
    string app_id = 1;
    string device_id = 2;
    google.protobuf.Timestamp installed_at = 3;
}

message AppUninstallEvent {
    string app_id = 1;
    string device_id = 2;
    google.protobuf.Timestamp uninstalled_at = 3;
    optional string reason = 4;
} 